--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@angular/service-worker": "^5.2.6",
     "angular-calendar": "^0.23.3",
     "angular2-cookie-law": "^1.3.1",
     "core-js": "^2.4.1",
