--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -31,6 +31,11 @@
             "src": "img/icons/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
+        },
+        {
+            "src": "img/icons/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ],
     "theme_color": "#3F51B5",
