--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -11,6 +11,9 @@
         "/*.bundle.css",
         "/*.bundle.js",
         "/*.chunk.js"
+      ],
+      "urls": [
+        "https://fonts.googleapis.com/**"
       ]
     }
   }, {
