--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Wystaw \u015bmieci",
+    "name": "Wystaw \u015bmieci - Zielonka",
     "short_name": "\u015Amieci",
     "start_url": "/index.html",
     "icons": [
