Add Android icons

--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,20 +1,29 @@
 {
-    "name": "Wystaw \u015bmieci - Zielonka",
-    "short_name": "\u015Amieci",
-    "start_url": "/index.html",
-    "icons": [
-        {
-            "src": "img/icons/android-chrome-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "img/icons/android-chrome-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ],
-    "theme_color": "#3F51B5",
-    "background_color": "#ffffff",
-    "display": "standalone"
+  "name": "Wystaw \u015bmieci - Zielonka",
+  "short_name": "\u015Amieci",
+  "start_url": "/index.html",
+  "icons": [{
+      "src": "img/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/android-chrome-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/android-chrome-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "theme_color": "#3F51B5",
+  "background_color": "#ffffff",
+  "display": "standalone"
 }
